{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 76,
  "lineage": "5d8c06b8-e3e3-eb6a-a4f3-cafcf142aaa7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0063927a",
            "arn": "arn:aws:ec2:us-east-1:539007596674:instance/i-0fbf7dc665db0cadc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sde",
                "encrypted": false,
                "iops": 150,
                "snapshot_id": "snap-0422a60bc19100b20",
                "volume_id": "vol-0c3974a7cbe693df3",
                "volume_size": 50,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 300,
                "snapshot_id": "snap-0011c978573493304",
                "volume_id": "vol-0fdbbc6b01b0aa223",
                "volume_size": 100,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdg",
                "encrypted": false,
                "iops": 150,
                "snapshot_id": "snap-0cdd05b2099453591",
                "volume_id": "vol-018695ef7a4f21e39",
                "volume_size": 50,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-062c9628e777fbff2",
                "volume_id": "vol-0f89bb9a1699d95a9",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbf7dc665db0cadc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypad-02032020-us-east-1_New",
            "monitoring": false,
            "primary_network_interface_id": "eni-0717a7263c9cc2634",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-3-85-245-94.compute-1.amazonaws.com",
            "public_ip": "3.85.245.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-070ee48100672cac0",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04628f76c22e9b833",
            "tags": {
              "Managed": "Kubernetes Cluster",
              "Name": "K8s-Master-Server",
              "OS": "CentOS",
              "Project": "K8s-Demo-ManagedCluster"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08cc75fa0d5377700"
            ]
          },
          "dependencies": [
            "aws_security_group.project-k8s-sg",
            "aws_subnet.project-k8s-snet",
            "aws_vpc.project-k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-k8s-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fd6c83afd0c4b035",
            "owner_id": "539007596674",
            "tags": {
              "Managed": "Kubernetes Cluster",
              "Name": "K8s-Master-Server",
              "Project": "K8s-Demo-ManagedCluster"
            },
            "vpc_id": "vpc-0cd049d128b15664d"
          },
          "dependencies": [
            "aws_vpc.project-k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "project-k8s-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd6c83afd0c4b035",
            "id": "r-rtb-0d533d1a9989ed3c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d533d1a9989ed3c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.project-k8s-gw",
            "aws_vpc.project-k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-k8s-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539007596674:security-group/sg-08cc75fa0d5377700",
            "description": "K8s-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cc75fa0d5377700",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65000
              }
            ],
            "name": "K8s-SG",
            "name_prefix": null,
            "owner_id": "539007596674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "Kubernetes Cluster",
              "Name": "K8s-Master-Server",
              "Project": "K8s-Demo-ManagedCluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd049d128b15664d"
          },
          "dependencies": [
            "aws_vpc.project-k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-k8s-snet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539007596674:subnet/subnet-04628f76c22e9b833",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04628f76c22e9b833",
            "map_public_ip_on_launch": false,
            "owner_id": "539007596674",
            "tags": {
              "Managed": "Kubernetes Cluster",
              "Name": "K8s-Master-Server",
              "Project": "K8s-Demo-ManagedCluster"
            },
            "vpc_id": "vpc-0cd049d128b15664d"
          },
          "dependencies": [
            "aws_vpc.project-k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-k8s-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539007596674:vpc/vpc-0cd049d128b15664d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5f028944a0a0b26",
            "default_route_table_id": "rtb-0d533d1a9989ed3c2",
            "default_security_group_id": "sg-011396b3fba6d23b4",
            "dhcp_options_id": "dopt-4cc81736",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cd049d128b15664d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d533d1a9989ed3c2",
            "owner_id": "539007596674",
            "tags": {
              "Managed": "Kubernetes Cluster",
              "Name": "K8s-Master-Server",
              "Project": "K8s-Demo-ManagedCluster"
            }
          }
        }
      ]
    }
  ]
}